# rust-cr8s

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-04-08-183012_create_rustaceans/: up.sql
migrations/2024-04-08-183014_create_crates/: up.sql
src/: main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
tests/: crates.rs  rustaceans.rs
tests/common/: mod.rs
