[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket ={ version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
diesel = {version = "2", features = ["chrono"]}
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4" }
